@@ -1,20 +1,28 @@
 package com.User_and_Order_Management_Service.ServiceImpl;
 
+import com.User_and_Order_Management_Service.Entites.Orders;
 import com.User_and_Order_Management_Service.Entites.Users;
+import com.User_and_Order_Management_Service.Exceptions.BadRequestException;
 import com.User_and_Order_Management_Service.Exceptions.ConflictException;
 import com.User_and_Order_Management_Service.Exceptions.DataNotFoundException;
 import com.User_and_Order_Management_Service.Mappers.UserMapper;
 import com.User_and_Order_Management_Service.Repository.UserRepository;
 import com.User_and_Order_Management_Service.RequestDtos.UserRequestDto;
+import com.User_and_Order_Management_Service.ResponseBuilder.PageResponse;
 import com.User_and_Order_Management_Service.ResponseDtos.UserResponseDto;
-import com.User_and_Order_Management_Service.UserService.UserService;
+import com.User_and_Order_Management_Service.Services.UserService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
@@ -33,6 +41,7 @@ public class UserServiceImpl implements UserService {
             throw new ConflictException("Email address already exists.");
         }
         Users entityUser = userMapper.toEntity(userRequestDto);
+        log.info("User with user id:{} created successfully!",entityUser.getId());
         return userMapper.toDto(userRepository.save(entityUser));
     }
 
@@ -40,14 +49,27 @@ public class UserServiceImpl implements UserService {
     public UserResponseDto getUserById(Long id) {
         Users userById = userRepository.findById(id)
                 .orElseThrow(() -> new DataNotFoundException("User with id: " + id + " not found!"));
+        log.info("Fetching the user details with user id:{} \n user details: {}",id,userById);
         return userMapper.toDto(userById);
     }
 
     @Override
-    public List<UserResponseDto> getAllUsers() {
-        List<Users> all = userRepository.findAll();
-        return all.stream().map(userMapper::toDto)
-                .collect(Collectors.toList());
+    @Cacheable(value = "users")
+    public PageResponse<UserResponseDto> getAllUsers(int page, int size) {
+        validatePageableParams(page,size);
+        PageRequest pageRequest = PageRequest.of(page, size);
+        Page<Users> usersPages = userRepository.findAll(pageRequest);
+
+        List<UserResponseDto> list = usersPages.stream().map(userMapper::toDto)
+                .toList();
+        log.info("Fetching all the users details: {}",list);
+        return new PageResponse<>(
+                list,
+                usersPages.getNumber(),
+                usersPages.getSize(),
+                usersPages.getTotalElements(),
+                usersPages.getTotalPages()
+        );
     }
 
     @Override
@@ -55,6 +77,7 @@ public class UserServiceImpl implements UserService {
         Users userById = userRepository.findById(id)
                 .orElseThrow(() -> new DataNotFoundException("User with id: " + id + " not found!"));
         userMapper.updateEntityFromDto(userRequestDto,userById);
+        log.info("Updated the user details with user id:{}",id);
         return userMapper.toDto(userRepository.save(userById));
     }
 
@@ -63,6 +86,13 @@ public class UserServiceImpl implements UserService {
         Users userById = userRepository.findById(id)
                 .orElseThrow(() -> new DataNotFoundException("User with id: " + id + " not found!"));
         userRepository.delete(userById);
+        log.info("User with user id: {} deleted successfully!",id);
         return "User Deleted Successfully!";
+    }
+
+    private void validatePageableParams(int page, int size){
+        if (page<0 || size<1){
+            throw new BadRequestException("Invalid Page and size parameters");
+        }
     }
 }
